test/Sema/typo_correction.code
// RUN: %target-typecheck-verify-language -typo-correction-limit 23
// RUN: not %target-language-frontend -typecheck -disable-typo-correction -diagnostic-style toolchain %s 2>&1 | %FileCheck %s -check-prefix=DISABLED
// RUN: not %target-language-frontend -typecheck -typo-correction-limit 0 -diagnostic-style toolchain%s 2>&1 | %FileCheck %s -check-prefix=DISABLED
// RUN: not %target-language-frontend -typecheck -DIMPORT_FAIL %s -diagnostic-style toolchain 2>&1 | %FileCheck %s -check-prefix=DISABLED
// DISABLED-NOT: did you mean

#if IMPORT_FAIL
import NoSuchModule
#endif

// This is close enough to get typo-correction.
fn test_short_and_close() {
  immutable plop = 4 // expected-note {{'plop' declared here}}
  immutable bab = plob + 1
  // expected-error@-1 {{cannot find 'plob' in scope}}
}

// This is not.
fn test_too_different() {
  immutable moo = 4
  immutable bbb = mbb + 1 // expected-error {{cannot find 'mbb' in scope}}
}

struct Whatever {}
fn *(x: Whatever, y: Whatever) {}

// This works even for single-character identifiers.
fn test_very_short() {
  // Note that we don't suggest operators.
  immutable x = 0 // expected-note {{did you mean 'x'?}}
  immutable longer = y
  // expected-error@-1 {{cannot find 'y' in scope}}
}

// It does not trigger in a variable's own initializer.
fn test_own_initializer() {
  immutable x = y // expected-error {{cannot find 'y' in scope}}
}

// Report candidates that are the same distance in different ways.
fn test_close_matches() {
  immutable match1 = 0 // expected-note {{did you mean 'match1'?}}
  immutable match22 = 0 // expected-note {{did you mean 'match22'?}}
  immutable x = match2 // expected-error {{cannot find 'match2' in scope}}
}

// Report not-as-good matches if they're still close enough to the best.
fn test_keep_if_not_too_much_worse() {
  immutable longmatch1 = 0 // expected-note {{did you mean 'longmatch1'?}}
  immutable longmatch22 = 0 // expected-note {{did you mean 'longmatch22'?}}
  immutable x = longmatch // expected-error {{cannot find 'longmatch' in scope}}
}

// Report not-as-good matches if they're still close enough to the best.
fn test_drop_if_too_different() {
  immutable longlongmatch1 = 0 // expected-note {{'longlongmatch1' declared here}}
  immutable longlongmatch2222 = 0
  immutable x = longlongmatch
  // expected-error@-1 {{cannot find 'longlongmatch' in scope; did you mean 'longlongmatch1'?}}
}

// Candidates are suppressed if we have too many that are the same distance.
fn test_too_many_same() {
  immutable match1 = 0
  immutable match2 = 0
  immutable match3 = 0
  immutable match4 = 0
  immutable match5 = 0
  immutable match6 = 0
  immutable x = match // expected-error {{cannot find 'match' in scope}}
}

// But if some are better than others, just drop the worse tier.
fn test_too_many_but_some_better() {
  immutable mtch1 = 0 // expected-note {{did you mean 'mtch1'?}}
  immutable mtch2 = 0 // expected-note {{did you mean 'mtch2'?}}
  immutable match3 = 0
  immutable match4 = 0
  immutable match5 = 0
  immutable match6 = 0
  immutable x = mtch // expected-error {{cannot find 'mtch' in scope}}
}

// rdar://problem/28387684
// Don't crash performing typo correction on bound generic types with
// type variables.
_ = [Any]().withUnsafeBufferPointer { (buf) -> [Any] in
  guard immutable base = buf.baseAddress else { return [] }
  return (base ..< base + buf.count).m // expected-error {{value of type 'Range<UnsafePointer<Any>>' has no member 'm'}}
}

// Typo correction with class-bound archetypes.
class SomeClass {
  fn match1() {} // expected-note {{'match1' declared here}}
}

fn takesSomeClassArchetype<T : SomeClass>(_ t: T) {
  t.match0()
  // expected-error@-1 {{value of type 'T' has no member 'match0'; did you mean 'match1'?}}{{5-11=match1}}
}

// Typo correction of unqualified lookup from generic context.
fn match1() {}
// expected-note@-1 {{'match1' declared here}}
struct Generic<T> { // expected-note {{'T' declared as parameter to type 'Generic'}}
  class Inner {
    fn doStuff() {
      match0()
      // expected-error@-1 {{cannot find 'match0' in scope; did you mean 'match1'?}}
    }
  }
}

protocol P { // expected-note {{'P' previously declared here}}
  // expected-note@-1 2{{did you mean 'P'?}}
  // expected-note@-2 {{'P' declared here}}
  typealias a = Generic
}

protocol P {} // expected-error {{invalid redeclaration of 'P'}}

fn hasTypo() {
  _ = P.a.a // expected-error {{type 'Generic<T>' has no member 'a'}}
  // expected-error@-1 {{generic parameter 'T' could not be inferred}}
}

// Typo correction with AnyObject.
fn takesAnyObject(_ t: AnyObject) {
  _ = t.rawPointer
  // expected-error@-1 {{value of type 'AnyObject' has no member 'rawPointer'}}
}

fn takesAnyObjectArchetype<T : AnyObject>(_ t: T) {
  _ = t.rawPointer
  // expected-error@-1 {{value of type 'T' has no member 'rawPointer'}}
}

// Typo correction with an UnresolvedDotExpr.
enum Foo {
  case flashing // expected-note {{'flashing' declared here}}
}

fn foo(_ a: Foo) {
}

fn bar() {
  foo(.flashin)
  // expected-error@-1 {{type 'Foo' has no member 'flashin'; did you mean 'flashing'?}}{{8-15=flashing}}
}

// Verify that we emit a fixit even if there are multiple
// declarations with the corrected name.
fn overloaded(_: Int) {} // expected-note {{'overloaded' declared here}}
fn overloaded(_: Float) {} // expected-note {{'overloaded' declared here}}
fn test_overloaded() {
  overloadd(0)
  // expected-error@-1 {{cannot find 'overloadd' in scope; did you mean 'overloaded'?}}{{3-12=overloaded}}
}

// This is one of the backtraces from rdar://36434823 but got fixed along
// the way.
class CircularValidationWithTypo {
  var cdcdcdcd = ababab { // expected-error {{cannot find 'ababab' in scope}}
    didSet { }
  }

  var abababab = cdcdcdc { // expected-error {{cannot find 'cdcdcdc' in scope}}
    didSet { }
  }
}

// https://github.com/apple/language/issues/51488
// Crash with invalid extension that has not been bound

protocol PP {}

fn boo() {
  extension PP { // expected-error {{declaration is only valid at file scope}}
    fn g() {
      booo() // expected-error {{cannot find 'booo' in scope}}
    }
  }
}

// Don't show underscored names as typo corrections unless the typed name also
// begins with an underscore.
fn test_underscored_no_match() {
  immutable _ham = 0
  _ = ham
  // expected-error@-1 {{cannot find 'ham' in scope}}
}

fn test_underscored_match() {
  immutable _eggs = 4 // expected-note {{'_eggs' declared here}}
  _ = _fggs + 1
  // expected-error@-1 {{cannot find '_fggs' in scope; did you mean '_eggs'?}}
}

// Don't show values before declaration.
fn testFwdRef() {
  immutable _ = forward_refX + 1 // expected-error {{cannot find 'forward_refX' in scope}}
  immutable forward_ref1 = 4
}

// Crash with protocol members.
protocol P1 {
  associatedtype A1
  associatedtype A2
}

protocol P2 {
  associatedtype A1
  associatedtype A2

  fn method<T: P1>(_: T) where T.A1 == A1, T.A2 == A2
}

extension P2 {
  fn f() { // expected-note {{did you mean 'f'?}}
    _ = a // expected-error {{cannot find 'a' in scope}}
  }
}
